# electricity

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: main.yml  updatertest.yml
canvas/: pitch.md
data/: consumption.csv  consumption_eda.ipynb  data_integration-ph.ipynb  data_integration.ipynb  data_integration_s.ipynb  day-ahead-eda-ph.ipynb  day-ahead-eda.ipynb  day-ahead_clean.ipynb  eda.ipynb  fetch_consumption.py  fetch_day_ahead.ipynb  fetch_day_ahead.py  fetch_weather.py  helen_2015_2021b.csv  helen_eda.ipynb  predict_future.ipynb  tuulivoima_eda.ipynb  tuulivoimatieto.csv  weather_eda.ipynb  weather_kumpula_012019-092022.csv  wind_power_eda.ipynb
data/archive/: README.md  data_integration_s.ipynb
data/day-ahead-prices/: Day-ahead_Prices_202201010000-202301010000.csv
data/processed_data/: consumption.parquet  dayahead.parquet  helen.parquet  tuulivoima.parquet  weather.parquet
forecast_data/: forecasts.csv
future_data/: consumption.parquet  helen.parquet  weather.parquet  wind.parquet
marketing/: presentation.pptx  ~$presentation.pptx
models/: xgboost_model.ubj
report/: report.tex  titlepage.tex
report/appendices/: graphs.tex  ui.tex
report/images/: components.drawio
src/app/: main.py  predictor.py  update_forecast.py
src/app/static/: bulma.min.css  index.js
src/app/templates/: index.html  planning.html
src/app/utils/: fetch_consumption.py
