[tool.poetry]
name = "electricity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fastapi = "^0.85.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
pandas = "^1.5.0"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"
invoke = "^1.7.1"
xgboost = "^1.6.2"
pyarrow = "^9.0.0"
fmiopendata = "^0.3.4"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
